# AutoCf

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  bot.py  browser_bot.py  cf_workerai_manager.py  cli.js  deploy-browserfarm.sh  package.json  process_cookies.py  proxies.json  proxy.json  proxy_list.txt  pyproject.toml  requirements.txt  run.bat  run.sh  terminal_ui.py  test_account.txt  test_accounts.json  validate.py  web_ui.py
.github/workflows/: ci.yml
adb/: cf_adb_creator.py  setup.bat
auto_freecf/: __init__.py  cli.py  core.py
docs/: PROJECT_GUIDE.md  REFACTORING.md
mail-adapter/: adapter.py  config.example.json
mail-adapter/tests/: __init__.py  test_adapter.py
signup_from_scratch/: .gitignore  README.md  batch_run.py  config.example.json  main.py  requirements.txt  run_test.bat
signup_from_scratch/src/: __init__.py  email_generator.py  email_verifier.py  humanize.py  js_challenge_bypass.py  live_dashboard.py  proxy_cf_tester.py  proxy_manager.py  rate_limit_guard.py  signup_flow.py  stealth.py  token_creator.py  token_validator.py  turnstile_bypass.py  utils.py
signup_from_scratch/tests/: __init__.py  test_proxy_manager.py  test_rate_limit_guard.py
src/: browser_bot.py
